# typ-tables

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  test.typ  zensical.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docs.yml
docs/: CHANGELOG.md  changelog.md  index.md  locators.md  pure_typst_vs_typ_tables.md  quickstart.md  style.md  typ_table.md  typst.md
scripts/: readme_snippet.py
skills/typ-tables/: SKILL.md
src/typ_tables/: __init__.py  _boxhead.py  _constants.py  _escape.py  _gutter.py  _locale.py  _location.py  _locators.py  _spanners.py  _stub.py  _style.py  _typ_data.py  _utils.py  boxhead.py  escape.py  formats.py  location.py  locators.py  stub.py  style.py  ttypes.py  utils.py
src/typ_tables/_formats/: __init__.py  _datetime.py  _numeric.py
src/typ_tables/_rendering/: __init__.py  cell.py  core.py  table.py
src/typ_tables/data/: x_currencies.csv
src/typ_tables/formats/: __init__.py  _numeric.py
tests/: conftest.py  test_adding_elements.py  test_date_time.py  test_fmt_tf.py  test_formatting.py  test_location.py  test_rendering.py  test_spanners.py  test_styling.py  test_to_typst.py  test_utils.py
tests/__inline_snapshot__/test_adding_elements/TestTabFigure.test_string_caption/: 15718cad-d93d-4cbe-b576-728b5db06a15.typ
tests/__inline_snapshot__/test_adding_elements/TestTabFigure.test_typst_caption/: f1f82a2a-2cbf-4e59-95d2-8599f7b323ed.typ
tests/__inline_snapshot__/test_adding_elements/TestTabFooter.test_multiple_notes/: 26c6d1d2-6eb8-4393-a5b7-cad03629ff0a.typ
tests/__inline_snapshot__/test_adding_elements/TestTabFooter.test_string_note/: daba0a3e-ef91-40a3-8111-3e98b003dbee.typ
tests/__inline_snapshot__/test_adding_elements/TestTabFooter.test_typst_note/: 85c090a2-6e48-4918-989b-7902237a5a9f.typ
tests/__inline_snapshot__/test_adding_elements/TestTabHeader.test_string_title/: b93906cf-393c-4e3e-b988-4d5c77de27b2.typ
tests/__inline_snapshot__/test_adding_elements/TestTabHeader.test_string_title_and_subtitle/: a5494390-6b07-4388-8123-18ac44b5356b.typ
tests/__inline_snapshot__/test_adding_elements/TestTabHeader.test_typst_title/: 2f92128f-4518-476e-a234-a3dc1c1f4c82.typ
tests/__inline_snapshot__/test_date_time/__module__/: date-pattern.typ  datetime-pattern.typ  day-month-year.typ  day-only.typ  dmy-hp.typ  h-m-p-time.typ  h-m-s-p-time.typ  h-p-time.typ  iso-short-time.typ  just-top-row-date.typ  just-top-row-datetime.typ  just-top-row-time.typ  mdy-hmsp.typ  month-day-year.typ  month-only.typ  sep-dash.typ  sep-t.typ  time-pattern.typ  wd-m-day-year.typ  wdmdy-hmp.typ  y-mn-day.typ  year-iso.typ  year-mn-day.typ  year-only.typ  year-quarter.typ  year-week.typ
tests/__inline_snapshot__/test_date_time/test_date_from_string/: date-from-string.typ
tests/__inline_snapshot__/test_date_time/test_datetime_from_string/: datetime-from-string.typ
tests/__inline_snapshot__/test_date_time/test_datetime_with_format_str/: datetime-format-str.typ
tests/__inline_snapshot__/test_date_time/test_time_from_string/: time-from-string.typ
tests/__inline_snapshot__/test_fmt_tf/__module__/: arrows-style.typ  check-mark-style.typ  circles-style.typ  custom-all-values.typ  custom-values.typ  default-tf.typ  diamonds-style.typ  just-top-row-tf.typ  na-value.typ  pattern-tf.typ  squares-style.typ  triangles-lr-style.typ  triangles-style.typ  up-down-style.typ  yes-no-style.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_all_boolean_columns/: all-boolean-columns-tf.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_chaining/: chaining-tf.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_multiple_columns/: multiple-columns-tf.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_none_without_na_val/: none-without-na-val.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_override_false_only/: override-false-only.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_override_true_only/: override-true-only.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_pattern_with_na_val/: pattern-with-na-val.typ
tests/__inline_snapshot__/test_fmt_tf/test_fmt_tf_with_rowname_col/: rowname-col-tf.typ
tests/__inline_snapshot__/test_formatting/TestFString.test_add_text/: 38194acd-2a5c-49dc-950b-86b6defddd49.typ
(+159 files in other folders)
